# chess

./: .gitignore  LICENSE  README.md  chess.cabal
app/: Main.hs
src/Data/: Board.hs  Piece.hs
src/Data/Board/: Eval.hs
src/Data/Piece/: Bishop.hs  King.hs  Knight.hs  Pawn.hs  Queen.hs  Rook.hs
