name:                chess
version:             0.1.0.0
synopsis:            Pure Haskell chess engine
description:         See README.md
homepage:            http://github.com/SilverSylvester/chess#readme
license:             MIT
license-file:        LICENSE
author:              Conor Reynolds
maintainer:          reynolds.conor@gmail.com
copyright:           2016 Conor Reynolds
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Board
                     , Data.Piece
                     , Data.Piece.Pawn
                     , Data.Piece.Knight
                     , Data.Piece.King
  build-depends:       base >= 4.7 && < 5
                     , digits
  default-language:    Haskell2010

executable chess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess
  default-language:    Haskell2010

test-suite chess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SilverSylvester/chess
